# webapp

./: README.md  build.sh  build_and_run_test.sh  run.sh  test.c  webapp.h
core/linux/: CMakeLists.txt  api.c  api.h  icon.c  icon.h  webapp.h
